# tp-rag

./: TP2.ipynb  doc.txt  pyproject.toml  tp1.ipynb  tp3.ipynb
